@@ -1829,8 +1829,37 @@ linkEdit (char **envp)
                           break;
                         }
                     }
-                  if (s == NULL)
-                    fprintf (stderr, "Warning: couldn't find %s\n", dbuf_c_str (&crtpath));
+                  if (NULL == s)
+                    {
+                      /* not found in standard library directories, serch in user defined linrary paths */
+                      /* TODO: sould be crt searched here at all? */
+                      for (s = setFirstItem (libPathsSet); s != NULL; s = setNextItem (libPathsSet))
+                        {
+                          dbuf_set_length (&crtpath, 0);
+                          dbuf_printf (&crtpath, "%s%s%s", s, DIR_SEPARATOR_STRING, *p);
+
+                          if (!access (dbuf_c_str (&crtpath), 0))  /* Found it! */
+                            {
+                              #ifdef __CYGWIN__
+                              /* TODO: is this still needed? */
+                              /* The CYGWIN version of the z80-gbz80 linker is getting confused with
+                              windows paths, so convert them to the CYGWIN format */
+                              char posix_path[PATH_MAX];
+                              void cygwin_conv_to_full_posix_path (char * win_path, char * posix_path);
+
+                              cygwin_conv_to_full_posix_path ((char *)dbuf_c_str (&crtpath), posix_path);
+                              dbuf_set_length (&crtpath, 0);
+                              dbuf_append_str (&crtpath, posix_path);
+                              #endif
+
+                              /* append C runtime file to the crt list */
+                              addSet (&crtSet, Safe_strdup (dbuf_c_str (&crtpath)));
+                              break;
+                            }
+                        }
+                    }
+                  if (NULL == s)
+                    fprintf (stderr, "Warning: couldn't find %s\n", *p);
                 }
               dbuf_destroy (&crtpath);
             }
